--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@
 /build
 
 # misc
+desktop.ini
 .DS_Store
 .env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+reference/
+codeStyles/
+*.xml
+*.iml
