--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "homepage": "https://danterazo.github.io/dwarf-underground/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "react-scripts": "1.0.3"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
